[project]
name = "ws-stream-mcap"
version = "0.0.0"
description = "Example of streaming an MCAP file over a WebSocket connection"
authors = [{ name = "Foxglove", email = "support@foxglove.dev" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["foxglove-sdk@file:../../foxglove-sdk/", "mcap>=1.2"]
# dependencies = ["foxglove-sdk>=0.2", "mcap>=1.2"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1"
