[package]
name = "example-ws-stream-mcap"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
bytes = "1.9"
clap = { version = "4.5", features = ["derive"] }
ctrlc = "3.4"
env_logger = "0.11"
foxglove = { path = "../../foxglove", features = ["unstable"] }
mcap = "0.14"
tracing = { version = "0.1", features = ["log"] }
